--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Project6</title>
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Prociono" rel="stylesheet">
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div id="app">
